Fixed guest signin link visibility on the error screen.
* Fixed guest signin link visibility on the error screen.
* Fixed "cr is not defined" error message during OOBE.

BUG=170252
TEST=Manual tests on Lumpy


Review URL: https://chromiumcodereview.appspot.com/12213070

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@181310 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: b95c4f90893814cfa30c2ecd758b63b13935aed2

--- a/chrome/browser/resources/chromeos/login/screen_error_message.css
+++ b/chrome/browser/resources/chromeos/login/screen_error_message.css
@@ -35,6 +35,7 @@ html[oobe=new] #error-message {
 .show-with-offline-message,
 .show-with-captive-portal,
 .show-with-proxy-error,
+.guest-signin,
 .offline-login {
   display: none;
 }
@@ -42,6 +43,7 @@ html[oobe=new] #error-message {
 .show-offline-message .show-with-offline-message,
 .show-captive-portal .show-with-captive-portal,
 .show-proxy-error .show-with-proxy-error,
+.allow-guest-signin .guest-signin,
 .allow-offline-login .offline-login {
   display: block;
 }
